force-app/main/default/objects/Customer_Extend_Bank_History__c/Customer_Extend_Bank_History__c.object-meta.xml
<CustomObject>
    <label>Customer&amp;Extend&amp;Bank History</label>
    <nameField>
        <label>Customer&amp;Extend&amp;Bank History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer&amp;Extend&amp;Bank History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>