force-app/main/default/objects/Customer_Extend_Bank_History__c/fields/New_record_body__c.field-meta.xml
<CustomField>
    <fullName>New_record_body__c</fullName>
    <label>New record body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>