force-app/main/default/objects/Customer_Extend_Bank_History__c/fields/Process_cause__c.field-meta.xml
<CustomField>
    <fullName>Process_cause__c</fullName>
    <label>Process cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>变更</fullName>
            </value>
            <value>
                <fullName>取消变更</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>