force-app/main/default/objects/Customer_Extend_Bank_History__c/fields/Record_body__c.field-meta.xml
<CustomField>
    <fullName>Record_body__c</fullName>
    <label>Record body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>