force-app/main/default/objects/Customer_Extend_Bank_History__c/fields/Record_id__c.field-meta.xml
<CustomField>
    <fullName>Record_id__c</fullName>
    <label>Record id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>