force-app/main/default/objects/Customer_Extend_Bank_History__c/fields/Record_type__c.field-meta.xml
<CustomField>
    <fullName>Record_type__c</fullName>
    <label>Record type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Customer_Extend__c</fullName>
            </value>
            <value>
                <fullName>Customer_Bank__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>